# benchmarking_solid_conc_slab

./: README.md
optimization/: STRUCTURE_EXPLANATION.md  pyproject.toml  requirements.txt  requirements_venv_rama.txt  tox.ini
optimization/examples/: analyze_design_space_lhs.py  code_visualisation.py  run_analysis_solid_one_way_slab.py  run_penalized_demo.py  structuralCodes.py  test_create_cross-section_structural_codes.py  validate_lhs_results.py
optimization/src/slabdesignbench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
optimization/src/slabdesignbench/optimization_problem_builder/: __init__.py  import_problem_from_csv.py  problem_builder.py  problem_evaluator.py
optimization/src/slabdesignbench/slab_models/: __init__.py
optimization/src/slabdesignbench/slab_models/codes/: __init__.py
optimization/src/slabdesignbench/slab_models/codes/din_4109/: __init__.py  checks_acoustics.py
optimization/src/slabdesignbench/slab_models/codes/ec2_2004_de/: __init__.py  checks_structural.py  combinations.py  loads.py  materials.py  time_effects.py
optimization/src/slabdesignbench/slab_models/generic/: __init__.py  deformations.py  exceptions.py  input_dataclasses.py  internal_forces.py  result_dataclasses.py  section_geometry.py  section_properties.py
optimization/src/slabdesignbench/slab_models/slab_types/: __init__.py
optimization/src/slabdesignbench/slab_models/slab_types/flat_slab_two_way_concrete/: __init__.py  constraint_defaults.csv  parameter_defaults.csv
optimization/src/slabdesignbench/slab_models/slab_types/hp_shell_one_way_concrete/: __init__.py  problem_list.csv
optimization/src/slabdesignbench/slab_models/slab_types/ribbed_slab_one_way_concrete/: __init__.py
optimization/src/slabdesignbench/slab_models/slab_types/solid_slab_one_way_concrete/: __init__.py  analysis_ec2_de.py  constraint_defaults.csv  parameter_defaults.csv  (+2 more)
optimization/tests/: conftest.py
optimization/tests/test_optimization_problem_builder/: __init__.py
optimization/tests/test_slab_models/test_codes/: __init__.py
optimization/tests/test_slab_models/test_codes/test_ec2/: __init__.py  test_loads.py  test_time_effects.py
optimization/tests/test_slab_models/test_generic/: __init__.py
optimization/tests/test_slab_models/test_slab_types/: __init__.py
(+67 files in other folders)
